Updated with gpay, sahre, profile commits

--- a/app/src/main/res/layout/dialog_payment_sheet.xml
+++ b/app/src/main/res/layout/dialog_payment_sheet.xml
@@ -21,11 +21,34 @@
 
         <TextView
             android:id="@+id/label_gpay"
-            android:layout_width="78dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Google Pay"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:layout_marginStart="12dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/apple_pay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_unselected"
+        android:padding="12dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/apple"/>
+
+        <TextView
+            android:id="@+id/la_pay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ApplePay"
+            android:textSize="16sp"
+            android:layout_marginStart="12dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -59,6 +82,7 @@
         android:textColor="@android:color/black"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="#00e676" />
+        android:backgroundTint="#00e676"/>
+
 
 </LinearLayout>
