--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light">
+    android:orientation="vertical"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingTop="20dp"
+    android:gravity="center_horizontal"
+    android:background="@drawable/main_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,59 +21,85 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark"
-            android:padding="16dp"
             android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="16dp">
+            android:gravity="center"
+            android:background="@drawable/card_background"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <TextView
                     android:id="@+id/tv_profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Username"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp" />
+                    android:text="yourName"
+                    android:textColor="@color/black"
+                    android:textSize="50dp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tv_profile_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="student@example.com"
-                    android:textColor="@android:color/white" />
+                    android:text="youremailgmail.com"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:textStyle="bold"  />
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/iv_profile_avatar"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/avatar"
+                android:background="@drawable/avatar_background"
+                android:contentDescription="Profile Avatar"
+                android:layout_marginStart="12dp"
+                android:scaleType="centerCrop" />
         </LinearLayout>
 
         <!-- Notification Placeholder -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bar_background"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp">
+
         <TextView
             android:id="@+id/tv_notification_placeholder"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:padding="8dp"
-            android:layout_marginBottom="16dp"/>
+            android:paddingLeft="10dp"
+            android:text="You have 1 task due"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-        <!-- Stats Layout -->
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginBottom="16dp">
+            android:gravity="center_vertical"
+            android:layout_marginBottom="10dp">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@android:color/holo_blue_dark"
+                android:background="@drawable/card_background"
                 android:padding="12dp"
                 android:orientation="vertical"
                 android:gravity="center">
@@ -95,7 +126,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@android:color/holo_blue_dark"
+                android:background="@drawable/card_background"
                 android:padding="12dp"
                 android:orientation="vertical"
                 android:gravity="center">
@@ -110,7 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_correct_answers"
-                    android:text="10"
+                    android:text="6"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
@@ -122,7 +153,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@drawable/card_background"
             android:padding="16dp"
             android:layout_marginBottom="20dp"
             android:gravity="center_horizontal">
@@ -137,7 +168,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_incorrect_answers"
-                android:text="10"
+                android:text="4"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -152,8 +183,6 @@
                 android:textAlignment="center"/>
         </LinearLayout>
 
-
-        <!-- Share Button -->
         <Button
             android:id="@+id/btn_share"
             android:layout_width="match_parent"
@@ -161,6 +190,6 @@
             android:text="Share ➡"
             android:textStyle="bold"
             android:textColor="@android:color/black"
-            android:backgroundTint="@android:color/holo_green_light"/>
+            android:backgroundTint="#00e676"/>
     </LinearLayout>
 </ScrollView>
