--- a/app/src/main/res/layout/fragment_upgrade.xml
+++ b/app/src/main/res/layout/fragment_upgrade.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@drawable/main_background"            android:padding="16dp"
+            android:padding="16dp"
+            android:background="@drawable/main_background"
             android:layout_marginBottom="16dp">
 
             <TextView
